Fixed bug with navbar being in front of main content but invisible. In share above the player link, change text to include the challenger's name. Fixed bug where the challengerinfo was being changed on the invite component causeing the share link to be wrong.

--- a/src/components/PlayerWelcome.scss
+++ b/src/components/PlayerWelcome.scss
@@ -84,14 +84,14 @@
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 0.02em;
-    margin: 0;
+    margin: 10px 0px 32px;
   }
 
   .small-text {
     font-family: $lato;
     font-size: 15px;
     letter-spacing: 0.02em;
-    padding: 10px;
+    padding: 10px 0px;
   }
 
   .curve {
